# OxiRescue

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-27-oxirescue-design.md  2026-02-27-oxirescue-plan.md
src/: cli.rs  lib.rs  main.rs
src/blob/: classifier.rs  hasher.rs  mod.rs  store.rs
src/db/: mod.rs  postgres.rs  schema.rs  sqlite.rs
src/dump/: mod.rs  recover.rs
src/export/: metadata.rs
src/fuse/: mount.rs
src/tui/: app.rs  browser.rs  dashboard.rs  export.rs  mod.rs  preview.rs
tests/: blob_store_test.rs  classifier_test.rs  dump_test.rs  sqlite_test.rs
