[package]
name = "oxirescue"
version = "0.1.0"
edition = "2024"
description = "Standalone disaster recovery tool for OxiCloud"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
