[package]
name = "oxirescue"
version = "0.1.0"
edition = "2024"
description = "Standalone disaster recovery tool for OxiCloud"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
infer = "0.16"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"
fuser = { version = "0.15", optional = true }
libc = "0.2"

[features]
fuse = ["dep:fuser"]

[dev-dependencies]
tempfile = "3"
